# geomagnetic

./: CMakeLists.txt  README.md
data/: kdata60s  offset120s  offset60s
etc/: Magcal.cpp  PracEigen.cpp  calcave.cpp  callean.cpp  test.cpp  xydata.cpp
include/: calcgeo.hpp  imu.hpp  localizer.hpp  localizer_old.hpp
src/: GnsstoMag.cpp  GnsstoMag.hpp  PracEigen.cpp  XtoZ.cpp  YtoZ.cpp  calcgeo.cpp  calcgeover2.cpp  compyaw.cpp  creatfig.cpp  creatfig.hpp  estoff.cpp  offsetz.cpp  selectdata.cpp  sensordata.cpp  test.cpp  version3.cpp  version4.cpp  xydata.cpp  yawdata.cpp
